--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <a class="nav-links" href="./index.html">Студия </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-links" href="./portfolio.html">Портфолио</a>
+            <a class="nav-links current" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-item">
             <a class="nav-links" href="">Контакты</a>
@@ -85,7 +85,17 @@
         <ul class="cards-list">
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/web_tehno.jpg" alt="Разработка веб сайта" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/web_tehno.jpg" alt="Разработка веб сайта" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Технокряк</h2>
                 <p class="cards-post">Веб-сайт</p>
