--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="./index.html"><span class="nav-span">Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item active">
-            <a class="nav-links" href="./index.html">Студия </a>
+            <a class="nav-links current" href="./index.html">Студия </a>
           </li>
           <li class="nav-item">
             <a class="nav-links" href="./portfolio.html">Портфолио</a>
@@ -61,7 +61,14 @@
     <section class="hero overlay">
       <div class="container">
         <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <button data-modal-open class="hero-btn" type="button">Заказать услугу</button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button data-modal-close class="close">&#10005
+            </button>
+          </div>
+
+        </div>
       </div>
     </section>
     <!-- Наши особенности -->
@@ -102,13 +109,22 @@
         <h2 class="about-title">Чем мы занимаемся</h2>
         <ul class="about-list">
           <li class="about-item">
-            <img src="./images/Наши_особенности/1.jpg" alt="Разработка сайта" width="370" height="294" />
+            <img src="./images/Наши_особенности/1.jpg" alt="Десктопные приложения" width="100%" height="294" />
+            <div class="about-description">
+              <p class="about-text">Десктопные приложения</p>
+            </div>
           </li>
           <li class="about-item">
-            <img src="./images/Наши_особенности/2.jpg" alt="Разработка мобильных приложений" width="370" height="294" />
+            <img src="./images/Наши_особенности/2.jpg" alt="Мобильные приложения" width="100%" height="294" />
+            <div class="about-description">
+              <p class="about-text">Мобильные приложения</p>
+            </div>
           </li>
           <li class="about-item">
-            <img src="./images/Наши_особенности/3.jpg" alt="Выбор цветовой гаммы" width="370" height="294" />
+            <img src="./images/Наши_особенности/3.jpg" alt="Дизайнерские решения" width="100%" height="294" />
+            <div class="about-description">
+              <p class="about-text">Дизайнерские решения</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -382,6 +398,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
