--- a/index.html
+++ b/index.html
@@ -296,43 +296,43 @@
         <ul class="clients-list">
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-1"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo1"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-2"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo2"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-3"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo3"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-4"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo4"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-5"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo5"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="">
-              <svg class="clients-logo" width="170" height="92">
-                <use href="./images/Icons/Clients.svg#Client-6"></use>
+              <svg class="clients-logo" width="106" height="60">
+                <use href="./images/Icons/clients.svg#Logo6"></use>
               </svg>
             </a>
           </li>
