--- a/portfolio.html
+++ b/portfolio.html
@@ -68,16 +68,16 @@
           <li class="btn-item">
             <button class="radio-btn" type="button">Все</button>
           </li>
-          <li>
+          <li class="btn-item">
             <button class="radio-btn" type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="btn-item">
             <button class="radio-btn" type="button">Приложения</button>
           </li>
-          <li>
+          <li class="btn-item">
             <button class="radio-btn" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="btn-item">
             <button class="radio-btn last-btn" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -104,7 +104,17 @@
           </li>
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/poster.jpg" alt="Дизайн постера" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/poster.jpg" alt="Дизайн постера" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Постер New Orlean vs Golden Star</h2>
                 <p class="cards-post">Дизайн</p>
@@ -114,7 +124,17 @@
           </li>
           <li class="cards-item third">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/app_seafood.jpg" alt="Приложение для ресторана" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/app_seafood.jpg" alt="Приложение для ресторана" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Ресторан Seafood</h2>
                 <p class="cards-post">Приложение</p>
@@ -123,8 +143,18 @@
           </li>
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/marketing_prime.jpg" alt="Маркетинговое сопровождение проекта" width="368"
-                height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/marketing_prime.jpg" alt="Маркетинговое сопровождение проекта" width="368"
+                  height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Проект Prime</h2>
                 <p class="cards-post">Маркетинг</p>
@@ -133,7 +163,17 @@
           </li>
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/app_baxes.jpg" alt="Разработка приложения" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/app_baxes.jpg" alt="Разработка приложения" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Проект Boxes</h2>
                 <p class="cards-post">Приложение</p>
@@ -142,7 +182,17 @@
           </li>
           <li class="cards-item third">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/web_insp.jpg" alt="Разработка сайта" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/web_insp.jpg" alt="Разработка сайта" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title" lang="en">Inspiration has no Borders</h2>
                 <p class="cards-post">Веб-сайт</p>
@@ -151,7 +201,17 @@
           </li>
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/Des_LE.jpg" alt="Дизайн верстки журнала" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/Des_LE.jpg" alt="Дизайн верстки журнала" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Издание Limited Edition</h2>
                 <p class="cards-post">Дизайн</p>
@@ -160,8 +220,18 @@
           </li>
           <li class="cards-item">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/marketing_LAB.jpg" alt="Маркетинговое сопровождение проекта" width="368"
-                height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/marketing_LAB.jpg" alt="Маркетинговое сопровождение проекта" width="368"
+                  height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title">Проект LAB</h2>
                 <p class="cards-post">Маркетинг</p>
@@ -170,7 +240,17 @@
           </li>
           <li class="cards-item third">
             <a class="cards-link" href="">
-              <img src="./images/Portfolio/app_GB.jpg" alt="Разработка" width="368" height="294" />
+              <div class="cards-thumb">
+                <img src="./images/Portfolio/app_GB.jpg" alt="Разработка" width="368" height="294" />
+                <div class="cards-pop-up">
+                  <p class="cards-pop-up-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит
+                    посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="cards-indent">
                 <h2 class="cards-title" lang="en">Growing Business</h2>
                 <p class="cards-post">Приложение</p>
@@ -178,8 +258,8 @@
             </a>
           </li>
         </ul>
+      </section>
     </div>
-    </section>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-container container">
